# gl-terrain-demo

./: AUTHORS  COPYING  Makefile.am  README  autogen.sh  configure.ac
models/: grass.mtl  grass2.mtl  rock.mtl  rock2.mtl  tree.mtl  tree2.mtl  tree3.mtl
shaders/: bloom-blur.frag  bloom-brightness.frag  bloom-brightness.vert  bloom-combine.frag  bloom-hblur.vert  bloom-vblur.vert  box.frag  box.vert  model-solid-shadow.frag  model-solid-shadow.vert  model-solid.frag  model-solid.vert  model-tex-shadow.frag  model-tex-shadow.vert  model-tex.frag  model-tex.vert  motion-blur.frag  motion-blur.vert  shadow-map-instanced.vert  shadow-map.frag  shadow-map.vert  skybox.frag  skybox.vert  terrain-shadow.frag  terrain-shadow.vert  terrain.frag  terrain.vert  tile.frag  tile.vert  water.frag  water.vert
src/: Makefile.am  main-constants.h  main.cpp  main.h  ter-box.cpp  ter-box.h  ter-cache.cpp  ter-cache.h  ter-camera.cpp  ter-camera.h  ter-filter.cpp  ter-filter.h  ter-light.cpp  ter-light.h  ter-mesh.cpp  ter-mesh.h  ter-model.cpp  ter-model.h  ter-object-catalog.cpp  ter-object-catalog.h  ter-object-renderer.cpp  ter-object-renderer.h  ter-object.cpp  ter-object.h  ter-render-texture.cpp  ter-render-texture.h  ter-shader-program.cpp  ter-shader-program.h  ter-shadow-box.cpp  ter-shadow-box.h  ter-shadow-map.cpp  ter-shadow-map.h  ter-shadow-renderer.cpp  ter-shadow-renderer.h  ter-sky-box.cpp  ter-sky-box.h  ter-terrain.cpp  ter-terrain.h  ter-texture.cpp  ter-texture.h  (+5 more)
