#
# Makefile.am
#
# Author: Iago Toral <itoral@igalia.com>
#
# Copyright (C) 2015 Iago Toral. All rights reserved.

SUBDIRS = src

MAINTAINERCLEANFILES = \
        aclocal.m4 \
        compile \
      	config.guess \
        config.sub \
        configure \
      	depcomp \
	install-sh \
      	ltmain.sh \
      	missing \
      	libtool \
      	stamp-h1 \
      	*.in \
      	*.make \
      	mkinstalldirs \
      	*~

DISTCLEANFILES = $(MAINTAINERCLEANFILES)
